# Checkers--Online

./: CMakeLists.txt  main.cpp  resource_loader.cpp  resource_loader.h
classes/: GameBoard.cpp  GameBoard.h  Scene.h  SceneManager.cpp  SceneManager.h  Settings.cpp  Settings.h
classes/UI/: Button.cpp  Button.h  CheckBox.cpp  CheckBox.h  Label.cpp  Label.h  Menu.cpp  Menu.h  Select.cpp  Select.h
scenes/: AboutS.cpp  AboutS.h  MainMenuS.cpp  MainMenuS.h  OfflineGameS.cpp  OfflineGameS.h  OnlineGame.cpp  OnlineGame.h  SettingsS.cpp  SettingsS.h
